test/error/parse/ExpectIntOrStrOrQualident.mod
MODULE ExpectIntOrStrOrQualident;
PROCEDURE P(x: INTEGER);
BEGIN
  CASE x OF | 0: END;
END P;
END ExpectIntOrStrOrQualident.
